cmake_minimum_required (VERSION 3.0)
project ("KTL Runtime Library")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(WDK REQUIRED)

set(KTL_RUNTIME_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(KTL_RUNTIME_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")

set(
	KTL_RUNTIME_SOURCE_FILES
		"${KTL_RUNTIME_SOURCE_DIR}/basic_runtime.cpp"
		"${KTL_RUNTIME_SOURCE_DIR}/exception_base.cpp"
		"${KTL_RUNTIME_SOURCE_DIR}/heap.cpp"
		"${KTL_RUNTIME_SOURCE_DIR}/placement_new.cpp"
)

set(TARGET_LIB basic_runtime)

wdk_add_library(
	${TARGET_LIB} STATIC 
		${KTL_RUNTIME_HEADER_FILES}
		${KTL_RUNTIME_SOURCE_FILES}
)
target_include_directories(
	${TARGET_LIB} PUBLIC
		${KTL_RUNTIME_INCLUDE_DIR}
)
target_compile_definitions(
	${TARGET_LIB} PRIVATE
		KTL_RUNTIME_DBG
		KTL_NO_CXX_STANDARD_LIBRARY
)